--- a/5. Visualizing KDE.ipynb
+++ b/5. Visualizing KDE.ipynb
@@ -84,14 +84,14 @@
      "output_type": "stream",
      "text": [
       "Variance explained:\n",
-      "PC1: 0.167; PC2: 0.077; PC3: 0.034\n"
+      "PC1: 0.17; PC2: 0.077; PC3: 0.037\n"
      ]
     }
    ],
    "source": [
     "## Let's go ahead and define the density function of our allele frequencies. \n",
     "# :: Refer to previous posts if you wish to visualize this density under the beta distriution ::\n",
-    "a, b = 1.5, .2\n",
+    "a, b = 1.7, .1\n",
     "\n",
     "\n",
     "# number of populations to generate\n",
@@ -185,7 +185,7 @@
     "global_data= np.vstack((admx_t,features))\n",
     "\n",
     "## setting our lower limit.\n",
-    "Outlier_threshold= 1e-4\n",
+    "Outlier_threshold= 1e-3\n",
     "\n",
     "## calculating kernel bandwidth. A proxy of local differentiation allowed for.\n",
     "params = {'bandwidth': np.linspace(np.min(features), np.max(features),20)}\n",
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -248,7 +248,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "edfd70b74a4243f6b8ef3e1f8f3b7d3f",
+       "model_id": "c9ec0e3a9b214e9b88e38d6f6fcd7733",
        "version_major": 2,
        "version_minor": 0
       },
@@ -280,7 +280,7 @@
        "<function __main__.figure_scores>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +368,7 @@
     "- As a measure of variation across the entire data set, distances in feature space are dependent on our sampling (McVean G., 2009). \n",
     "- From a philogenetic view point, principlal component analysis of haplotype data will give the same weight to variation across our variables, or snps.\n",
     "\n",
-    "_Assuming we have an representative sample of our study object, that loci are mutating at the same rate and are identical by descent, is higher relative density of a group of points an accurate sign of a more recent common ancestor?_\n",
+    "_Assuming we have a representative sample of our study object, that loci are mutating at the same rate and are identical by descent, is higher relative density of a group of points an accurate sign of a more recent common ancestor?_\n",
     "\n",
     "\n",
     "This becomes an issue when our populations aren't as neatly structured or differentiated as we've made them here. But let's take it easy for now, and look at some things we can be sure of. One of those is that haplotypes in neat clusters are indeed closely related. How neat? why don't we let the data decide? In our represention of genetic variation, a rough description of variation allowed for could be the distribution of pairwise distances of neighboring points. By drawing the bandwidth of its kernels from this distribution, the MeanShift clustering algorithm provides a neat solution to this problem, extracting clusters of significantly packed observations."
@@ -517,7 +517,6 @@
     "    fig = go.Figure(data=fig_data, layout=layout)\n",
     "    iplot(fig)\n",
     "\n",
-    "#print(label_select)\n",
     "interact(figure_scores, name=cluster_names)"
    ]
   },
