--- a/7. Controlling for size.ipynb
+++ b/7. Controlling for size.ipynb
@@ -55,7 +55,7 @@
     "\n",
     "- see [Novembre & Stephens (2008)](https://www.nature.com/articles/ng.139) for a study case and analysis of this problem.\n",
     "\n",
-    "Let's do that now. As in the first post, we will start by generating a space of vectors. Chose at least two to be far appart, and the rest to be closer together. Give at least one of the former an innordinate size difference to the rest."
+    "Let's do that now. As in the first post, we will start by generating a space of vectors. Chose at least two to be far appart, and the rest to be closer together. Give at least one of the latter an innordinate size difference to the rest."
    ]
   },
   {
@@ -637,6 +637,14 @@
     "\n",
     "fig = go.Figure(data=fig_data, layout=layout)\n",
     "iplot(fig)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Peruse frequency vector space, chose populations and biased sizes below:\n",
+    "    "
    ]
   },
   {
@@ -3760,7 +3768,9 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
