moodified order. added indexing MS post

--- a/5. Visualizing KDE.ipynb
+++ b/5. Visualizing KDE.ipynb
@@ -84,7 +84,7 @@
      "output_type": "stream",
      "text": [
       "Variance explained:\n",
-      "PC1: 0.17; PC2: 0.077; PC3: 0.037\n"
+      "PC1: 0.158; PC2: 0.101; PC3: 0.037\n"
      ]
     }
    ],
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -248,7 +248,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c9ec0e3a9b214e9b88e38d6f6fcd7733",
+       "model_id": "b552e1839a8048f3965d12d757f5d5e0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -280,7 +280,7 @@
        "<function __main__.figure_scores>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,13 +424,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "94a765e04ef34024a3f51b9764bd60da",
+       "model_id": "2b45b5989b2b4b20bdadf82e4a428940",
        "version_major": 2,
        "version_minor": 0
       },
