--- a/6. Indexing_MS.ipynb
+++ b/6. Indexing_MS.ipynb
@@ -7574,7 +7574,7 @@
    "cell_type": "code",
    "execution_count": 49,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
