corrected reference in 8., modified 6. to use simulated haps instead of just points.

--- a/8. Controlling for size.ipynb
+++ b/8. Controlling for size.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "What i didn't touch on in that post was the importance of sampling in principal component analysis. In the last section, i chose vectors close to one another, together with vectors far distant, in order to produce differentiated populations. If you tweeked the population sizes, you might have noticed that if some of the close together populations largely outweighed the rest, the distances to the more differentiated clusters would be reduced.\n",
     "\n",
-    "- see [Novembre & Stephens (2008)](https://www.nature.com/articles/ng.139) for a study case.\n",
+    "- see [McVean 2009](http://journals.plos.org/plosgenetics/article?id=10.1371/journal.pgen.1000686) for a study case.\n",
     "\n",
     "Let's do that now. As in the first post, we will start by generating a space of vectors. Chose at least two to be far appart, and the rest to be closer together. Give at least one of the latter an innordinate size difference to the rest."
    ]
@@ -2781,7 +2781,7 @@
     "\n",
     "The distortion can be seen in that our outlying populations don't appear as far as we would have expected them to given their vectors alone. They tend to appear in the center because of their reduced impact on variance components.\n",
     "\n",
-    "As Novembre and Stephens remarked, this can be a problem when deriving conclusions from relative distances in feature space.\n",
+    "As remarked by McVean, this can be a problem when deriving conclusions from relative distances in feature space.\n",
     "\n",
     "My approach here isn't very elegant. MeanShift allows us to identify clusters in feature space, i just resample those clusters equally, inverse transform their coordinates and perform the PCA anew. The actual data is transposed onto the resulting space."
    ]
