wrapping and commenting. Functions transferred to Modules_tools.py

--- a/1. Generating_haplotypes.ipynb
+++ b/1. Generating_haplotypes.ipynb
@@ -42,6 +42,8 @@
     "from plotly.offline import download_plotlyjs, init_notebook_mode, plot, iplot\n",
     "from plotly.graph_objs import *\n",
     "\n",
+    "import Modules_tools\n",
+    "\n",
     "init_notebook_mode(connected=True)"
    ]
   },
@@ -13983,27 +13985,6 @@
     "data= np.array(data)\n",
     "\n",
     "### Calculate pairwise Fst based on frequency vectors selected.\n",
-    "def return_fsts2(freq_array):\n",
-    "    pops= range(freq_array.shape[0])\n",
-    "    H= {pop: [1-(freq_array[pop,x]**2 + (1 - freq_array[pop,x])**2) for x in range(freq_array.shape[1])] for pop in range(freq_array.shape[0])}\n",
-    "    Store= []\n",
-    "\n",
-    "    for comb in it.combinations(H.keys(),2):\n",
-    "        P= [sum([freq_array[x,i] for x in comb]) / len(comb) for i in range(freq_array.shape[1])]\n",
-    "        HT= [2 * P[x] * (1 - P[x]) for x in range(len(P))]\n",
-    "        per_locus_fst= [[(HT[x] - np.mean([H[p][x] for p in comb])) / HT[x],0][int(HT[x] == 0)] for x in range(len(P))]\n",
-    "        per_locus_fst= np.nan_to_num(per_locus_fst)\n",
-    "        Fst= np.mean(per_locus_fst)\n",
-    "        Fst=np.nan_to_num(Fst)\n",
-    "        Store.append([comb,Fst])\n",
-    "    \n",
-    "    \n",
-    "    ### total fst:\n",
-    "    #P= [sum([freq_array[x,i] for x in pops]) / len(pops) for i in range(freq_array.shape[1])]\n",
-    "    #HT= [2 * P[x] * (1 - P[x]) for x in range(len(P))]\n",
-    "    #FST= np.mean([(HT[x] - np.mean([H[p][x] for p in pops])) / HT[x] for x in range(len(P))])\n",
-    "    \n",
-    "    return pd.DataFrame(Store,columns= ['pops','fst'])    \n",
     "\n",
     "freqs_selected= vector_lib[Pops,:]\n",
     "Pairwise= return_fsts2(freqs_selected)\n",
