--- a/11. Admixture simulations.ipynb
+++ b/11. Admixture simulations.ipynb
@@ -57,7 +57,10 @@
     "import re\n",
     "\n",
     "from random import sample\n",
-    "from random import shuffle\n"
+    "from random import shuffle\n",
+    "\n",
+    "\n",
+    "import Modules_tools"
    ]
   },
   {
@@ -2062,341 +2065,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def extract_profiles(global_data,target_ind_dict):\n",
-    "    ## estimate the bandwith\n",
-    "    params = {'bandwidth': np.linspace(np.min(global_data), np.max(global_data),20)}\n",
-    "    grid = GridSearchCV(KernelDensity(algorithm = \"ball_tree\",breadth_first = False), params,verbose=0)\n",
-    "    \n",
-    "    cluster_profiles= {x:[] for x in target_ind_dict.keys()}\n",
-    "    \n",
-    "    \n",
-    "    ## perform MeanShift clustering.\n",
-    "    combine= {}\n",
-    "    for bull in target_ind_dict.keys():\n",
-    "        Quanted_set= global_data[target_ind_dict[bull],:]\n",
-    "        grid.fit(Quanted_set)\n",
-    "        kde = grid.best_estimator_\n",
-    "        \n",
-    "        P_dist = kde.score_samples(Quanted_set)\n",
-    "        Fist = kde.score_samples(global_data)\n",
-    "        \n",
-    "        ## Normalizing log-likelihood estimates by those of the reference set.\n",
-    "        #Fist = scipy.stats.norm(np.mean(P_dist),np.std(P_dist)).cdf(Fist)\n",
-    "        cluster_profiles[bull].append(Fist)\n",
-    "    \n",
-    "    \n",
-    "    return cluster_profiles\n",
-    "\n",
-    "\n",
-    "def Merge_class(Ref_profiles,focus_indicies,Out,Diff_threshold,X_threshold):\n",
-    "    Blocks_genome = recursively_default_dict()\n",
-    "    \n",
-    "    for CHR in Ref_profiles.keys():\n",
-    "        print(CHR)\n",
-    "        Points = sorted(Out[CHR].keys())\n",
-    "        Likes = Ref_profiles[CHR]\n",
-    "        N_pops= len(Likes[[x for x in Likes.keys()][0]])\n",
-    "        Pop_labels= Likes[[x for x in Likes.keys()][0]].keys()\n",
-    "        print(\"number of reference populations: {0}\".format(N_pops))\n",
-    "        Likes = {x:[Likes[bl][x] for bl in sorted(Likes.keys())] for x in Pop_labels}\n",
-    "        Likes = {x:np.array([y[0] for y in Likes[x]]) for x in Likes.keys()}\n",
-    "\n",
-    "        Topo = []\n",
-    "        \n",
-    "        #range_Parents = [x + Aro.shape[0] for x in range(Daddy.shape[0])]\n",
-    "        #range_Crossed = [x for x in range(Aro.shape[0])]\n",
-    "        \n",
-    "        for acc in focus_indicies:\n",
-    "            Guys = np.array([Likes[x][:,acc] for x in Pop_labels])\n",
-    "            Guys = np.nan_to_num(Guys)\n",
-    "            Guys = [[[y,0][int(y<=X_threshold)] for y in x] for x in Guys]\n",
-    "            \n",
-    "            Test = [int(x <= X_threshold) for x in np.amax(np.array(Guys),axis = 0)]     \n",
-    "            \n",
-    "            #\n",
-    "            Guys = np.array(Guys).T\n",
-    "            \n",
-    "            maxim = np.argmax(Guys,axis = 1)\n",
-    "            where_X = [x for x in range(Guys.shape[0]) if Test[x] == 1]\n",
-    "            \n",
-    "            #\n",
-    "            Consex = [x for x in it.combinations(range(N_pops),2)]\n",
-    "            if Consex:\n",
-    "                for h in range(len(maxim)):\n",
-    "                    CL = []\n",
-    "                    for j in Consex:\n",
-    "                        Diff = Guys[h,j]\n",
-    "                        if maxim[h] not in j or len([x for x in Diff if x < X_threshold]) > 0:\n",
-    "                            continue\n",
-    "                        if max(Diff) <= X_threshold:\n",
-    "                            Diff = 0\n",
-    "                        else:\n",
-    "#                            Diff = int(len([x for x in Diff if x <= Diff_threshold]) == 1)\n",
-    "                            Diff = abs(max(Diff)) / abs(min(Diff))\n",
-    "                            Diff = int(Diff > Diff_threshold)\n",
-    "                        \n",
-    "                        if Diff == 0:\n",
-    "                            CL.append(j)\n",
-    "                    \n",
-    "                    if len(CL) == 2:\n",
-    "                        maxim[h] = 7\n",
-    "                    if len(CL) == 1:\n",
-    "                        maxim[h] = sum(CL[0]) + N_pops\n",
-    "            \n",
-    "            maxim[where_X] = N_pops\n",
-    "            \n",
-    "            if not Consex:\n",
-    "                for h in range(len(maxim)):\n",
-    "                    maxim[h] = int(10*Guys[h,0])    \n",
-    "            \n",
-    "            \n",
-    "            Topo.append(maxim + 1)\n",
-    "        \n",
-    "        \n",
-    "        Topo = np.array(Topo).T\n",
-    "        \n",
-    "        Clove = {CHR:{Points[x]:Topo[x,] for x in range(len(Points))}}\n",
-    "        \n",
-    "        Blocks_genome.update(Clove)\n",
-    "    \n",
-    "    return Blocks_genome\n",
-    "\n",
-    "\n",
-    "\n",
-    "def Merge_class2(Ref_profiles,target_indx,focus_indicies,Out,Diff_threshold,X_threshold):\n",
-    "    Blocks_genome = recursively_default_dict()\n",
-    "    \n",
-    "    for CHR in Ref_profiles.keys():\n",
-    "        print(CHR)\n",
-    "        Points = sorted(Out[CHR].keys())\n",
-    "        Likes = Ref_profiles[CHR]\n",
-    "        N_pops= len(Likes[[x for x in Likes.keys()][0]])\n",
-    "        Pop_labels= Likes[[x for x in Likes.keys()][0]].keys()\n",
-    "        print(\"number of reference populations: {0}\".format(N_pops))\n",
-    "        #Likes = {x:[Likes[bl][x] for bl in sorted(Likes.keys())] for x in Pop_labels}\n",
-    "        #Likes = {x:np.array([y[0] for y in Likes[x]]) for x in Likes.keys()}\n",
-    "\n",
-    "        Topo = []\n",
-    "        \n",
-    "        #range_Parents = [x + Aro.shape[0] for x in range(Daddy.shape[0])]\n",
-    "        #range_Crossed = [x for x in range(Aro.shape[0])]\n",
-    "        \n",
-    "        for bl in Likes.keys():\n",
-    "            maxim= []\n",
-    "            \n",
-    "            CDF= {x:scipy.stats.norm(np.mean([Likes[bl][x][0][y] for y in target_indx[x]]),\n",
-    "                                     np.std([Likes[bl][x][0][y] for y in target_indx[x]])).cdf(Likes[bl][x][0]) for x in Likes[bl].keys()\n",
-    "                 }\n",
-    "            \n",
-    "            for acc in focus_indicies:\n",
-    "                Test= [CDF[x][acc] for x in Likes[bl].keys()]\n",
-    "                \n",
-    "                Guys= [np.exp(Likes[bl][x][0][acc]) for x in Likes[bl].keys()]\n",
-    "                \n",
-    "                if max(Test) <= X_threshold:\n",
-    "                    maxim.append(N_pops)\n",
-    "                else:\n",
-    "                    Consex = [x for x in it.combinations(range(N_pops),2)]\n",
-    "                    CL = []\n",
-    "                    for j in Consex:\n",
-    "                        Diff = [Guys[i] for i in j]\n",
-    "                        \n",
-    "                        if Guys.index(max(Guys)) not in j or len([x for x in Diff if x < X_threshold]) > 0:\n",
-    "                            continue\n",
-    "                        if max(Diff) <= X_threshold:\n",
-    "                            Diff = 0\n",
-    "                        else:\n",
-    "#                            Diff = int(len([x for x in Diff if x <= Diff_threshold]) == 1)\n",
-    "                            Diff = abs(max(Diff)) / abs(min(Diff))\n",
-    "                            Diff = int(Diff > Diff_threshold)\n",
-    "                        \n",
-    "                        if Diff == 0:\n",
-    "                            CL.append(j)\n",
-    "                    \n",
-    "                    if len(CL) == 2:\n",
-    "                        maxim.append(7)\n",
-    "                    if len(CL) == 1:\n",
-    "                        maxim.append(sum(CL[0]) + N_pops)\n",
-    "                    else:\n",
-    "                        maxim.append(Guys.index(max(Guys)))\n",
-    "            \n",
-    "            Topo.append([maxim[c] + 1 for c in range(len(maxim))]) \n",
-    "        \n",
-    "        Topo = np.array(Topo)\n",
-    "        print(Topo.shape)\n",
-    "        Clove = {CHR:{Points[x]:Topo[x,] for x in range(len(Points))}}\n",
-    "        \n",
-    "        Blocks_genome.update(Clove)\n",
-    "    \n",
-    "    return Blocks_genome\n",
-    "\n",
-    "\n",
-    "def compress_ideo(df,chromosome_list):\n",
-    "    \n",
-    "    new_set = []\n",
-    "    \n",
-    "    for CHR in range(len(chromosome_list)):\n",
-    "        \n",
-    "        Chr = int(re.search('Region_(.+?)_',chromosome_list[CHR]).group(1))\n",
-    "        sub = df[df.chrom == chromosome_list[CHR]]\n",
-    "        Coordinates = sorted(sub.start)\n",
-    "        Size = sub.shape[0]\n",
-    "        start = min(df.start)\n",
-    "        First = sub.gieStain.iloc[0]\n",
-    "        for index in range(len(Coordinates)):\n",
-    "            row = sub[sub.start == Coordinates[index]]\n",
-    "            if index == 0:\n",
-    "                continue\n",
-    "            if index == (Size - 1):\n",
-    "                if row.gieStain.iloc[0] == First:\n",
-    "                    new_set.append([chromosome_list[CHR],start,Out[Chr][max(df.start)],First])\n",
-    "                else:\n",
-    "                    new_set.append([chromosome_list[CHR],start,Out[Chr][max(df.start)],First])\n",
-    "                    First = row.gieStain.iloc[0]\n",
-    "                    start = row.start.iloc[0]\n",
-    "                    new_set.append([chromosome_list[CHR],start,Out[Chr][max(df.start)],First])\n",
-    "            else:\n",
-    "                if row.gieStain.iloc[0] == First:\n",
-    "                    continue\n",
-    "                else:\n",
-    "                    new_set.append([chromosome_list[CHR],start,row.start.iloc[0]-1,First])\n",
-    "                    First = row.gieStain.iloc[0]\n",
-    "                    start = row.start.iloc[0]\n",
-    "    \n",
-    "    new_set = pd.DataFrame(new_set,columns = ['chrom', 'start', 'end', 'gieStain'])\n",
-    "    return new_set\n",
-    "\n",
-    "\n",
-    "# Here's the function that we'll call for each dataframe (once for chromosome\n",
-    "# ideograms, once for genes).  The rest of this script will be prepping data\n",
-    "# for input to this function\n",
-    "#\n",
-    "def chromosome_collections(df, y_positions, height,  **kwargs):\n",
-    "    \"\"\"\n",
-    "    Yields BrokenBarHCollection of features that can be added to an Axes\n",
-    "    object.\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    df : pandas.DataFrame\n",
-    "        Must at least have columns ['chrom', 'start', 'end', 'color']. If no\n",
-    "        column 'width', it will be calculated from start/end.\n",
-    "    y_positions : dict\n",
-    "        Keys are chromosomes, values are y-value at which to anchor the\n",
-    "        BrokenBarHCollection\n",
-    "    height : float\n",
-    "        Height of each BrokenBarHCollection\n",
-    "    Additional kwargs are passed to BrokenBarHCollection\n",
-    "    \"\"\"\n",
-    "    del_width = False\n",
-    "    if 'width' not in df.columns:\n",
-    "        del_width = True\n",
-    "        df['width'] = df['end'] - df['start']\n",
-    "    for chrom, group in df.groupby('chrom'):\n",
-    "        \n",
-    "        yrange = (y_positions[chrom], height)\n",
-    "        xranges = group[['start', 'width']].values\n",
-    "        yield BrokenBarHCollection(\n",
-    "            xranges, yrange, facecolors=group['colors'], **kwargs)\n",
-    "    if del_width:\n",
-    "        del df['width']\n",
-    "\n",
-    "\n",
-    "def return_ideogram(ideo):\n",
-    "    # Height of each ideogram\n",
-    "    chrom_height = 1\n",
-    "\n",
-    "    # Spacing between consecutive ideograms\n",
-    "    chrom_spacing = 0\n",
-    "\n",
-    "    # Height of the gene track. Should be smaller than `chrom_spacing` in order to\n",
-    "    # fit correctly\n",
-    "    gene_height = 0.0\n",
-    "\n",
-    "    # Padding between the top of a gene track and its corresponding ideogram\n",
-    "    gene_padding = 0.0\n",
-    "\n",
-    "\n",
-    "    # Keep track of the y positions for ideograms and genes for each chromosome,\n",
-    "    # and the center of each ideogram (which is where we'll put the ytick labels)\n",
-    "    ybase = 0\n",
-    "    chrom_ybase = {}\n",
-    "    gene_ybase = {}\n",
-    "    chrom_centers = {}\n",
-    "\n",
-    "    # Iterate in reverse so that items in the beginning of `chromosome_list` will\n",
-    "    # appear at the top of the plot\n",
-    "    for chrom in chromosome_list[::-1]:\n",
-    "        chrom_ybase[chrom] = ybase\n",
-    "        chrom_centers[chrom] = ybase + chrom_height / 2.\n",
-    "        gene_ybase[chrom] = ybase - gene_height - gene_padding\n",
-    "        ybase += chrom_height + chrom_spacing\n",
-    "\n",
-    "\n",
-    "\n",
-    "    # Keep track of the y positions for ideograms and genes for each chromosome,\n",
-    "    # and the center of each ideogram (which is where we'll put the ytick labels)\n",
-    "    ybase = 0\n",
-    "    chrom_ybase = {}\n",
-    "    gene_ybase = {}\n",
-    "    chrom_centers = {}\n",
-    "\n",
-    "    # Iterate in reverse so that items in the beginning of `chromosome_list` will\n",
-    "    # appear at the top of the plot\n",
-    "    for chrom in chromosome_list[::-1]:\n",
-    "        chrom_ybase[chrom] = ybase\n",
-    "        chrom_centers[chrom] = ybase + chrom_height / 2.\n",
-    "        gene_ybase[chrom] = ybase - gene_height - gene_padding\n",
-    "        ybase += chrom_height + chrom_spacing\n",
-    "    \n",
-    "\n",
-    "    # Colors for different chromosome stains\n",
-    "    color_lookup = {\n",
-    "        'red': [255, 0, 0],\n",
-    "        'yellow': [255, 255, 0],\n",
-    "        'blue': [0, 0, 255],\n",
-    "        'orange': [255, 165, 0],\n",
-    "        'green': [50, 205, 50],\n",
-    "        'black': [0, 0, 0],\n",
-    "        'purple': [128, 0, 128],\n",
-    "        'silver': [211, 211, 211],\n",
-    "    }\n",
-    "\n",
-    "    # Add a new column for colors\n",
-    "    \n",
-    "    ideo['colors'] = ideo['gieStain'].apply(lambda x: tuple([round(y / float(255),1) for y in color_lookup[x]]))\n",
-    "    # Add a new column for width\n",
-    "    ideo['width'] = ideo.end - ideo.start\n",
-    "\n",
-    "    # Width, height (in inches)\n",
-    "    figsize = (10, 30)\n",
-    "\n",
-    "    fig = plt.figure(figsize=figsize)\n",
-    "    ax = fig.add_subplot(111)\n",
-    "\n",
-    "    # Now all we have to do is call our function for the ideogram data...\n",
-    "    print(\"adding ideograms...\")\n",
-    "    for collection in chromosome_collections(ideo, chrom_ybase, chrom_height, edgecolors=None, linewidths= 0):\n",
-    "        ax.add_collection(collection)\n",
-    "\n",
-    "    # Axes tweaking\n",
-    "    ax.set_xticks([x for x in range(min(ideo.start),max(ideo.end),int(1000))])\n",
-    "    plt.xticks(fontsize = 5,rotation = 90)\n",
-    "    ax.tick_params(axis = 'x',pad = 10)\n",
-    "\n",
-    "    ax.tick_params(axis='y', which='major', pad=30)\n",
-    "    ax.set_yticks([chrom_centers[i] for i in chromosome_list])\n",
-    "    ax.set_yticklabels(chromosome_list, fontsize = 5)\n",
-    "    ax.axis('tight')\n",
-    "    return fig\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -2741,6 +2409,13 @@
     "ideo = compress_ideo(ideo,chromosome_list)\n",
     "\n",
     "fig= return_ideogram(ideo)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Two way admixture simulations using sNMF admixture proportions outputp**\n"
    ]
   },
   {
