add -Out argument to return_ideogram function. reset plots of N5

--- a/5. Visualizing KDE.ipynb
+++ b/5. Visualizing KDE.ipynb
@@ -9,9 +9,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import scipy\n",
     "import numpy as np\n",
@@ -63,9 +76,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variance explained:\n",
+      "PC1: 0.192; PC2: 0.094; PC3: 0.031\n"
+     ]
+    }
+   ],
    "source": [
     "## Let's go ahead and define the density function of our allele frequencies. \n",
     "# :: Refer to previous posts if you wish to visualize this density under the beta distriution ::\n",
@@ -218,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -226,7 +248,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1dda0276c3c747fca666d75dd84ee2a0",
+       "model_id": "9cec5816ee1348ac89e94c9ff3f2cc51",
        "version_major": 2,
        "version_minor": 0
       },
@@ -258,7 +280,7 @@
        "<function __main__.figure_scores>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +391,7 @@
      "output_type": "stream",
      "text": [
       "Variance explained:\n",
-      "PC1: 0.578; PC2: 0.314; PC3: 0.108\n"
+      "PC1: 0.442; PC2: 0.385; PC3: 0.173\n"
      ]
     }
    ],
@@ -485,13 +507,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e6da291ca2c44f88d030685dc0027d6",
+       "model_id": "cab74f46f9dd4b9e965e7c8b216dc71a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -523,7 +545,7 @@
        "<function __main__.figure_scores>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -633,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -641,7 +663,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4236333b764a4942ae2d1827957c0b6c",
+       "model_id": "f3fb31db6b4c49118759431f5eb00a6c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -673,7 +695,7 @@
        "<function __main__.figure_scores>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
