develop readme. remove runtime warnings.

--- a/9. Conditional_variation.ipynb
+++ b/9. Conditional_variation.ipynb
@@ -15,10 +15,10 @@
     {
      "data": {
       "text/html": [
-       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+       "<script type=\"text/javascript\">window.PlotlyConfig = {MathJaxConfig: 'local'};</script><script type=\"text/javascript\">if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}</script><script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window._Plotly) {require(['plotly'],function(plotly) {window._Plotly=plotly;});}</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+       "<script type=\"text/javascript\">window.PlotlyConfig = {MathJaxConfig: 'local'};</script><script type=\"text/javascript\">if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}</script><script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window._Plotly) {require(['plotly'],function(plotly) {window._Plotly=plotly;});}</script>"
       ]
      },
      "metadata": {},
@@ -77,13 +77,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bcf3a8e674c84f439097da6d059637bb",
+       "model_id": "a2030d5e8c6945cf9e05042ec59a2862",
        "version_major": 2,
        "version_minor": 0
       },
@@ -115,7 +115,7 @@
        "<function __main__.jumpingJack>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,6 @@
     "            x = data[[x for x in range(sum(Sizes)) if label_vector[x] == i],0],\n",
     "            y = data[[x for x in range(sum(Sizes)) if label_vector[x] == i],1],\n",
     "            z = data[[x for x in range(sum(Sizes)) if label_vector[x] == i],2],\n",
-    "            type='scatter3d',\n",
     "            mode= \"markers\",\n",
     "            marker= {\n",
     "            'line': {'width': 0},\n",
@@ -206,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,11 +314,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9f9ae3ee0a934fe1bebcfc7157723754",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/html": [
+       "<p>Failed to display Jupyter Widget of type <code>interactive</code>.</p>\n",
+       "<p>\n",
+       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
+       "  that the widgets JavaScript is still loading. If this message persists, it\n",
+       "  likely means that the widgets JavaScript library is either not installed or\n",
+       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
+       "  Widgets Documentation</a> for setup instructions.\n",
+       "</p>\n",
+       "<p>\n",
+       "  If you're reading this message in another frontend (for example, a static\n",
+       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
+       "  it may mean that your frontend doesn't currently support widgets.\n",
+       "</p>\n"
+      ],
+      "text/plain": [
+       "interactive(children=(Dropdown(description='tup', options=('01', '02', '12'), value='01'), Output()), _dom_classes=('widget-interact',))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.plot_proximities>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Plot overlaps\n",
     "\n",
@@ -371,7 +410,61 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from plotly import tools\n",
+    "\n",
+    "Xs= []\n",
+    "pop1= []\n",
+    "labels= []\n",
+    "\n",
+    "for window in Windows.keys():\n",
+    "    Xs.extend([window] * 3)\n",
+    "    pop1.append(Windows[window][tuple((int(tup[0]),int(tup[1])))][int(tup[0])])\n",
+    "    pop1.append(Windows[window][tuple((int(tup[0]),int(tup[1])))][int(tup[1])])\n",
+    "    pop1.append(Windows[window][tuple((int(tup[0]),int(tup[1])))]['empty'])\n",
+    "    labels.extend(['P2|1','P1|2','leftover space'])\n",
+    "\n",
+    "coords= {i:[x for x in range(len(labels)) if labels[x] == i] for i in list(set(labels))}\n",
+    "\n",
+    "datum= np.array([Xs,pop1]).T\n",
+    "\n",
+    "fig_data= [go.Scatter(\n",
+    "x= datum[coords[i],0],\n",
+    "y= datum[coords[i],1],\n",
+    "mode= 'lines',\n",
+    "name= i\n",
+    ") for i in coords.keys()\n",
+    "]\n",
+    "\n",
+    "trace1= go.Scatter(\n",
+    "    x= [np.exp(x) for x in fst_x],\n",
+    "    y= [np.exp(x) for x in y_true],\n",
+    "    mode= 'markers'\n",
+    "    )\n",
+    "\n",
+    "trace2= go.Scatter(\n",
+    "    x= fst_x,\n",
+    "    y= y_true,\n",
+    "    mode= 'markers'\n",
+    "    )\n",
+    "\n",
+    "fig = tools.make_subplots(rows=1, cols=2,\n",
+    "                         subplot_titles=('Euc to Fst','log of relationship'))\n",
+    "\n",
+    "fig.append_trace(trace1, 1, 1)\n",
+    "fig.append_trace(trace2, 1, 2)\n",
+    "\n",
+    "layout = go.Layout(\n",
+    "    title= 'Euclidian distances to fst',\n",
+    "    yaxis=dict(\n",
+    "        title='fst'),\n",
+    "    xaxis=dict(\n",
+    "        title='fst')\n",
+    ")\n",
+    "\n",
+    "fig= go.Figure(data=fig, layout=layout)\n",
+    "iplot(fig)"
+   ]
   }
  ],
  "metadata": {
